--- a/Cargo.toml
+++ b/Cargo.toml
@@ -3,7 +3,7 @@ name = "expectest"
 version = "0.2.0"
 authors = ["Aleksey Kuznetsov <zummenix@gmail.com>"]
 
-description = "Crate provides matchers and matcher functions for unit testing. (WIP)"
+description = "Crate provides matchers and matcher functions for unit testing."
 repository = "https://github.com/zummenix/expectest"
 readme = "./README.md"
 keywords = ["unit", "test", "matcher", "expect"]
