--- a/Cargo.toml
+++ b/Cargo.toml
@@ -10,6 +10,6 @@ keywords = ["unit", "test", "matcher", "expect"]
 
 license = "MIT"
 
-[dependencies.num]
-version = "~0.1.27"
-default-features = false
+[dependencies]
+num = { version = "~0.1.27", default-features = false }
+
