--- a/Cargo.toml
+++ b/Cargo.toml
@@ -10,6 +10,14 @@ keywords = ["unit", "test", "matcher", "expect"]
 
 license = "MIT OR Apache-2.0"
 
+build = "build.rs"
+
 [dependencies]
 num = { version = "0.1.28", default-features = false }
+
+[build-dependencies]
+skeptic = "0.4.0"
+
+[dev-dependencies]
+skeptic = "0.4.0"
 
