--- a/.travis.yml
+++ b/.travis.yml
@@ -5,7 +5,4 @@ rust:
   - stable
   - nightly
 
-after_success:
-  - if [ "$TRAVIS_RUST_VERSION" == "nightly" ]; then
-        cargo test --features nightly;
-    fi
+script: ./ci/build-and-test.sh
