--- a/.travis.yml
+++ b/.travis.yml
@@ -2,7 +2,10 @@ language: rust
 sudo: false
 
 rust:
-  - stable
-  - nightly
+    - 1.0.0
+    - 1.10.0
+    - 1.20.0
+  # - stable
+  # - nightly
 
 script: ./ci/build-and-test.sh
