--- a/.travis.yml
+++ b/.travis.yml
@@ -3,9 +3,7 @@ sudo: false
 
 rust:
     - 1.0.0
-    - 1.10.0
-    - 1.20.0
-  # - stable
-  # - nightly
+    - stable
+    - nightly
 
 script: ./ci/build-and-test.sh
