Revert "Fix dependency version requirement to avoid 0.1.43"
This reverts commit e359b0e2bf924172134731f9f6a56e13e69c46f3.

--- a/Cargo.toml
+++ b/Cargo.toml
@@ -16,7 +16,7 @@ license = "MIT OR Apache-2.0"
 travis-ci = { repository = "zummenix/expectest" }
 
 [dependencies]
-num-traits = ">0.1.40, <=0.1.42"
+num-traits = "0.1.40"
 
 [features]
 nightly = []
