--- a/Cargo.toml
+++ b/Cargo.toml
@@ -12,6 +12,8 @@ categories = ["development-tools::testing"]
 
 license = "MIT OR Apache-2.0"
 
+edition = "2018"
+
 [badges]
 travis-ci = { repository = "zummenix/expectest" }
 
