--- a/Cargo.toml
+++ b/Cargo.toml
@@ -9,6 +9,7 @@ documentation = "https://docs.rs/expectest"
 readme = "README.md"
 keywords = ["testing", "tests", "matcher", "expect"]
 categories = ["development-tools::testing"]
+maintenance = { status = "passively-maintained" }
 
 license = "MIT OR Apache-2.0"
 
